--- a/base-dev.yml
+++ b/base-dev.yml
@@ -5,7 +5,7 @@ spring:
     name: tensquare-friend
   datasource:   # 配置数据源
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.43.228:3306/tensquare_friend?characterEncoding=utf-8
+    url: jdbc:mysql://192.168.43.228:3306/tensquare_base?characterEncoding=utf-8
     username: root
     password: 123
   jpa:      # 配置jpa
