--- a/base-dev.yml
+++ b/base-dev.yml
@@ -5,9 +5,9 @@ spring:
     name: tensquare-friend
   datasource:   # 配置数据源
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.43.228:3306/tensquare_base?characterEncoding=utf-8
+    url: jdbc:mysql://192.168.146.137:3306/tensquare_base?characterEncoding=utf-8
     username: root
-    password: 123
+    password: root
   jpa:      # 配置jpa
     database: mysql
     show-sql: true
