--- a/base-dev.yml
+++ b/base-dev.yml
@@ -11,6 +11,8 @@ spring:
   jpa:      # 配置jpa
     database: mysql
     show-sql: true
+  rabbitmq:
+    host: 192.168.146.137
 eureka:
   client:
     serviceUrl:
